web/style.css
body {
  background-color: #ffffff;
  color: #333;
  margin: 0;
  font-size: 14px;
  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
}

a {
  text-decoration: none;
  color: #39526b;
  font-weight: bold;
}

a:hover {
  color: #48c;
}

h2 {
  font-size: 24px;
  font-family: "Cronos Pro", "Trebuchet MS", "Helvetica Neue", Helvetica,
    Arial, sans-serif;
  color: #669;
  margin-top: 30px;
  margin-bottom: 10px;
}

h3 {
  font-size: 20px;
  font-weight: bold;
  font-family: "Cronos Pro", "Trebuchet MS", "Helvetica Neue", Helvetica,
    Arial, sans-serif;
  color: #669;
  margin-top: 15px;
  margin-bottom: 5px;
}

div.content {
  margin: 0 auto;
  min-width: 730px;
  max-width: 70em;
}

div.top {
  background: -webkit-linear-gradient(left, white, #08f); /* Safari 5.1 - 6.0 */
  background: -o-linear-gradient(left, white, #08f); /* Opera 11.1 - 12.0 */
  background: -moz-linear-gradient(left, white, #08f); /* Firefox 3.6 - 15 */
  background: linear-gradient(to right, white, #08f); /* standard syntax */
  /* text-shadow: #102010 2px 2px 2px; */
  padding: 11px 0;
  width: 100%;
  display: table;

  color: blue;
  font-family: "Cronos Pro", "Trebuchet MS", "Lucida Sans", "Helvetica Neue",
    Helvetica, Arial, sans-serif;
  font-size: 15px;
  line-height: 18px;
  vertical-align: bottom;
}
div#motto {
    width: 100%;
    font-size: 200%;
    color: #09c;
    font-weight: bold;
    margin: 10px auto 5px 130px;
    padding: 0 0 0 1em;
    vertical-align: middle;
    line-height: 40px;
    display: table-cell;
}

div.top a { color: white; }
div.top a:hover { color: #ffff80; }

img#logo { width: 160px; display: table-cell; vertical-align: middle; margin: 0 auto 0 1em; }

div.menu {
  display: table-cell;
  vertical-align: middle;
  text-align: right;
  margin: 0 0 0 auto;
  padding: 0 12px;
  font-size: 120%;
  line-height: 25px;
}

div.menu > ul {
  font-family: inherit;
}

div.menu > ul > li {
  list-style-type: none;
  text-align: right;
}

div.inset {
  padding: 3ex 10ex;
}

div.intro {
  min-height: 355px;
}

img.figure {
  padding: 0ex 0ex 2ex 6ex;
  float: right;
  margin: 0 auto;
}

div.mailing-list-form {
  float: right;
  padding: 2ex;
  margin: 0ex 0ex 2ex 2ex;
  background-color: #eed;
}

div.mailing-list-form h2 {
  font-size: 20px;
  margin: 0;
}

div.mailing-list-form p {
  margin: 0.5ex 0;
}

#mailing-list-div {
  display: none;
}

#mailing-list-div div {
  font-size: 10px;
}

a.mailing-list {
  display: block;
  text-align: center;
  font-family: monospace;
}

#mailing-list-div-noscript {
  max-width: 273px;
}

div.github {
  font-size: 110%;
  text-align: center;
}

form.download {
  width: 100%;
  text-align: center;
  padding-bottom: 0.5ex;
}

form.download > ul {
  padding: 6px 0 0 0;
  margin: 0;
  font-size: 90%;
}

form.download > ul > li {
  display: inline;
}

form.download > ul > li:first-child:before {
  content: "";
}

form.download > ul > li:before {
  content: "\2219 ";
}

input.download {
  color: white;
  font-size: 16px;
  background-color: #184;
  background-image: -moz-linear-gradient(center top, #1a4, #164);
  background-repeat: repeat-x;
  border: 1px solid #0d4d33;
  border-radius: 3px;
  padding: 5px 20px;
  font-weight: bold;
}

input.download:hover {
  background: #194;
}

div.current-releases {
  display: table;
  width: 100%;
}

div.current-releases > div {
  padding-bottom: 1ex;
  width: 50%;
  display: table-cell;
}

table.previous-releases {
  padding-left: 20px;
  border-collapse: collapse;
}

table.previous-releases > caption {
  display: none;
}

table.previous-releases > thead {
  display: none;
}

table.previous-releases > tbody > tr > td {
  padding: 1px 25px;
  border-top: 1px solid #aaa;
  border-bottom: 1px solid #aaa;
}

form.download-old {
  display: inline-block;
}

input.download-old {
  border: none;
  padding: 0;
  background-color: transparent;
  font-size: inherit;
  font-weight: bold;
  display: inline;
  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
  color: #39526b;
  cursor: pointer;
}

input.download-old:hover {
  color: #48c;
}

ol.pub-list > li {
  margin-bottom: 1ex;
}

span.pub-title {
  font-style: italic;
}

div.three-cols {
  display: table;
}

div.three-cols > div {
  display: table-cell;
  width: 33%;
}

div.related-projects {
  padding: 2ex;
  background-color: #eed;
}

div.related-projects h2 {
  margin: 0;
}

div.related-projects > ul {
  margin: 1ex 0 0 0;
  padding-left: 3.5ex;
}

div.sponsors {
  color: #888;
  font-size: 75%;
  padding-top: 5ex;
}

/************************/
/* Download form styles */
/************************/

body.download {
  margin: 0; padding: 0;
}

div.content h1 {
  color: white;
  background-color: #48C;
  text-shadow: #102010 2px 2px 2px;
  vertical-align: top;
  margin: 0;
  padding: 15px;
  font-family: "Cronos Pro", "Trebuchet MS", "Lucida Sans", "Helvetica Neue",
    Helvetica, Arial, sans-serif;
  font-size: 45px;
}

p.explanation {
  width: 80ex;
  padding: 25px;
}

form.questionnaire {
  padding: 2ex;
  border-style: solid;
  border-width: 1px;
  border-color: #bbb;
  background-color: #eee;
}

td.question {
  vertical-align: top;
  text-align: right;
  font-weight: bold;
}

